feat(scheduler): 按领域和应用组织任务及执行记录
- 定时任务和执行记录采用领域、应用两层左树右表布局
- 以所属应用替代业务分组，Quartz 使用基于任务 ID 的稳定身份
- 执行记录保存归属快照，目录直接读取领域和应用表
- 清空开发环境旧执行记录并迁移内置任务归属
- 统一复用左树面板封装，补充前端架构与页面接入规范
- 补充调度身份、归属筛选及 PostgreSQL 回归验证