@@ -26,7 +26,10 @@ import sm.system.aop.log.BizLog;
 import sm.system.response.PageData;
 import sm.system.response.ResultEnum;
 import sm.system.security.authorization.AdministratorOnly;
-import sm.system.query.ListQueryUtil;
+import sm.system.query.ListSqlQuery;
+import sm.domain.sys.base.app.service.AppReferenceService;
+import sm.domain.sys.base.app.model.entity.AppEntity;
+import sm.domain.sys.base.common.model.vo.ReferenceVO;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,14 +45,13 @@ import java.util.stream.Collectors;
 @Slf4j
 @RequiredArgsConstructor
 public class JobService {
-    private static final String MANAGED_JOB_ID_KEY = "smartManageJobId";
-    private static final Map<String, ListQueryUtil.Field<JobEntity>> LIST_FIELDS = Map.of(
-            "number", ListQueryUtil.string(JobEntity::getNumber, true),
-            "jobName", ListQueryUtil.string(JobEntity::getJobName, true),
-            "jobGroup", ListQueryUtil.string(JobEntity::getJobGroup, true),
-            "cronExpression", ListQueryUtil.string(JobEntity::getCronExpression, false),
-            "status", ListQueryUtil.enumeration(JobEntity::getStatus, true),
-            "jobClassName", ListQueryUtil.string(JobEntity::getJobClassName, false));
+    private static final Map<String, ListSqlQuery.Field> LIST_FIELDS = Map.of(
+            "number", ListSqlQuery.string("a.number", true),
+            "jobName", ListSqlQuery.string("a.job_name", true),
+            "appName", ListSqlQuery.string("b.name", false),
+            "cronExpression", ListSqlQuery.string("a.cron_expression", false),
+            "status", ListSqlQuery.enumeration("a.status", true),
+            "jobClassName", ListSqlQuery.string("a.job_class_name", false));
 
     private final JobMapper mapper;
     private final JobLogMapper jobLogMapper;
@@ -57,30 +59,25 @@ public class JobService {
     private final JobTxService txService;
     private final JobConverter converter;
     private final JobDefinitionValidator definitionValidator;
+    private final AppReferenceService appReferenceService;
 
     // ==================== 查询 ====================
 
     public PageData<JobListVO> listPage(JobListForm form) {
-        LambdaQueryWrapper<JobEntity> qw = new LambdaQueryWrapper<JobEntity>();
-        if (form.getKeyword() != null && !form.getKeyword().isBlank()) {
-            String kw = "%" + form.getKeyword().trim() + "%";
-            qw.and(condition -> condition.like(JobEntity::getJobName, kw).or().like(JobEntity::getJobGroup, kw).or().like(JobEntity::getNumber, kw));
-        }
         if (form.getStatus() != null && !form.getStatus().isBlank()) {
             JobStatus.require(form.getStatus());
-            qw.eq(JobEntity::getStatus, form.getStatus());
         }
-        ListQueryUtil.apply(qw, form, LIST_FIELDS);
-        if (!ListQueryUtil.hasSort(form)) qw.orderByDesc(JobEntity::getCreateTime);
-        if (!ListQueryUtil.isSortedBy(form, "id")) qw.orderByDesc(JobEntity::getId);
-
-        Page<JobEntity> page = new Page<>(form.getPageNum(), form.getPageSize());
-        Page<JobEntity> result = mapper.selectPage(page, qw);
-        Map<Long, JobLogEntity> latestLogs = getLatestLogs(result.getRecords());
-        List<JobListVO> vos = result.getRecords().stream()
-                .map(entity -> assembleListVO(entity, latestLogs.get(entity.getId())))
-                .collect(Collectors.toList());
-        return PageData.of(result.getTotal(), form.getPageNum(), form.getPageSize(), vos);
+        Page<JobListVO> result = mapper.selectListPage(new Page<>(form.getPageNum(), form.getPageSize()),
+                form, ListSqlQuery.of(form, LIST_FIELDS));
+        Map<Long, JobLogEntity> latestLogs = getLatestLogs(result.getRecords().stream().map(JobListVO::getId).toList());
+        for (JobListVO item : result.getRecords()) {
+            JobLogEntity lastLog = latestLogs.get(item.getId());
+            if (lastLog != null) {
+                item.setLastExecuteTime(lastLog.getStartTime());
+                item.setLastExecuteStatus(lastLog.getStatus());
+            }
+        }
+        return PageData.of(result.getTotal(), form.getPageNum(), form.getPageSize(), result.getRecords());
     }
 
     public JobDetailVO detail(Long id) {
@@ -100,14 +97,9 @@ public class JobService {
     @AdministratorOnly
     public Long save(JobSaveForm form) {
         definitionValidator.validate(form);
-        JobEntity previous = form.getId() == null ? null : mapper.selectById(form.getId());
         Long id = txService.save(form);
         JobEntity current = requireEntity(id);
         synchronize(current);
-        if (previous != null && (!previous.getJobName().equals(current.getJobName())
-                || !previous.getJobGroup().equals(current.getJobGroup()))) {
-            removeQuartzJob(previous.getJobName(), previous.getJobGroup());
-        }
         return id;
     }
 
@@ -116,7 +108,7 @@ public class JobService {
     public void deleteById(Long id, Integer version) {
         JobEntity entity = requireEntity(id);
         txService.deleteById(id, version);
-        removeQuartzJob(entity.getJobName(), entity.getJobGroup());
+        removeQuartzJob(entity.getId());
     }
 
     // ==================== 任务操作 ====================
@@ -146,18 +138,17 @@ public class JobService {
         synchronizeAll(entities, true);
     }
 
-    /** 系统任务由数据库迁移提供稳定定义，应用启动后必须自动同步到持久化 Quartz。 */
+    /** 数据库定义是权威来源；启动时恢复全部任务，包括用户配置的暂停任务。 */
     @EventListener(ApplicationReadyEvent.class)
-    void synchronizeSystemJobsOnStartup() {
-        List<JobEntity> systemJobs = mapper.selectList(new LambdaQueryWrapper<JobEntity>()
-                .eq(JobEntity::getIsSystem, true));
-        synchronizeAll(systemJobs, false);
+    void synchronizeJobsOnStartup() {
+        List<JobEntity> jobs = mapper.selectList(new LambdaQueryWrapper<>());
+        synchronizeAll(jobs, true);
     }
 
     private void synchronizeAll(List<JobEntity> entities, boolean removeOrphans) {
         Map<Long, JobKey> expectedKeys = new java.util.HashMap<>();
         for (JobEntity entity : entities) {
-            expectedKeys.put(entity.getId(), JobKey.jobKey(entity.getJobName(), entity.getJobGroup()));
+            expectedKeys.put(entity.getId(), ManagedJobIdentity.jobKey(entity.getId()));
             synchronize(entity);
         }
         if (!removeOrphans) {
@@ -166,7 +157,7 @@ public class JobService {
         try {
             for (JobKey jobKey : scheduler.getJobKeys(GroupMatcher.anyJobGroup())) {
                 JobDetail jobDetail = scheduler.getJobDetail(jobKey);
-                String managedId = jobDetail == null ? null : jobDetail.getJobDataMap().getString(MANAGED_JOB_ID_KEY);
+                String managedId = jobDetail == null ? null : jobDetail.getJobDataMap().getString(ManagedJobIdentity.JOB_ID_KEY);
                 if (managedId != null) {
                     JobKey expectedKey = expectedKeys.get(Long.valueOf(managedId));
                     if (expectedKey == null || !expectedKey.equals(jobKey)) {
@@ -185,7 +176,7 @@ public class JobService {
     public void trigger(Long id) {
         JobEntity entity = requireEntity(id);
         try {
-            JobKey jobKey = JobKey.jobKey(entity.getJobName(), entity.getJobGroup());
+            JobKey jobKey = ManagedJobIdentity.jobKey(entity.getId());
             scheduler.triggerJob(jobKey);
         } catch (SchedulerException e) {
             throw new BizException(ResultEnum.EXTERNAL_SERVICE_ERROR, "触发任务失败");
@@ -208,7 +199,6 @@ public class JobService {
     @AdministratorOnly
     public Map<String, Object> createNewData() {
         Map<String, Object> data = new LinkedHashMap<>();
-        data.put("jobGroup", "DEFAULT");
         data.put("status", JobStatus.PAUSED.name());
         data.put("cronExpression", "0 0 3 * * ?");
         return data;
@@ -250,19 +240,19 @@ public class JobService {
     private void synchronize(JobEntity entity) {
         definitionValidator.resolveJobClass(entity.getJobClassName());
         JobDataMap dataMap = parseJobData(entity.getJobData());
-        dataMap.put(MANAGED_JOB_ID_KEY, entity.getId().toString());
+        dataMap.put(ManagedJobIdentity.JOB_ID_KEY, entity.getId().toString());
         dataMap.put(ManagedJobDispatcher.TARGET_CLASS_KEY, entity.getJobClassName());
         if (entity.getMutexKey() != null && !entity.getMutexKey().isBlank()) {
             dataMap.put(ManagedJobDispatcher.MUTEX_KEY, entity.getMutexKey());
         }
         JobDetail jobDetail = JobBuilder.newJob(ManagedJobDispatcher.class)
-                .withIdentity(entity.getJobName(), entity.getJobGroup())
+                .withIdentity(ManagedJobIdentity.jobKey(entity.getId()))
                 .withDescription(entity.getDescription())
                 .usingJobData(dataMap)
                 .storeDurably()
                 .build();
         CronTrigger trigger = TriggerBuilder.newTrigger()
-                .withIdentity(entity.getJobName() + "_trigger", entity.getJobGroup())
+                .withIdentity(ManagedJobIdentity.triggerKey(entity.getId()))
                 .forJob(jobDetail.getKey())
                 .withSchedule(CronScheduleBuilder.cronSchedule(entity.getCronExpression())
                         .withMisfireHandlingInstructionDoNothing())
@@ -284,7 +274,7 @@ public class JobService {
                 scheduler.resumeJob(jobDetail.getKey());
             }
         } catch (SchedulerException exception) {
-            log.error("Quartz 任务同步失败: id={}, group={}, name={}", entity.getId(), entity.getJobGroup(), entity.getJobName(), exception);
+            log.error("Quartz 任务同步失败: id={}, name={}", entity.getId(), entity.getJobName(), exception);
             throw new BizException(ResultEnum.EXTERNAL_SERVICE_ERROR, "Quartz 任务同步失败，可执行重新同步恢复");
         }
     }
@@ -295,11 +285,11 @@ public class JobService {
         return dataMap;
     }
 
-    private void removeQuartzJob(String jobName, String jobGroup) {
+    private void removeQuartzJob(Long jobId) {
         try {
-            scheduler.deleteJob(JobKey.jobKey(jobName, jobGroup));
+            scheduler.deleteJob(ManagedJobIdentity.jobKey(jobId));
         } catch (SchedulerException exception) {
-            log.error("Quartz 任务删除失败: group={}, name={}", jobGroup, jobName, exception);
+            log.error("Quartz 任务删除失败: id={}", jobId, exception);
             throw new BizException(ResultEnum.EXTERNAL_SERVICE_ERROR, "Quartz 任务删除失败，可执行重新同步恢复");
         }
     }
@@ -317,33 +307,25 @@ public class JobService {
         return page.getRecords().isEmpty() ? null : page.getRecords().get(0);
     }
 
-    private JobListVO assembleListVO(JobEntity entity, JobLogEntity lastLog) {
-        JobListVO vo = converter.toListVO(entity);
-        if (lastLog != null) {
-            vo.setLastExecuteTime(lastLog.getStartTime());
-            vo.setLastExecuteStatus(lastLog.getStatus());
-        }
-        return vo;
-    }
-
-    private Map<Long, JobLogEntity> getLatestLogs(List<JobEntity> entities) {
-        if (entities.isEmpty()) {
+    private Map<Long, JobLogEntity> getLatestLogs(List<Long> jobIds) {
+        if (jobIds.isEmpty()) {
             return Map.of();
         }
-        List<Long> jobIds = entities.stream().map(JobEntity::getId).toList();
         return jobLogMapper.selectLatestByJobIds(jobIds).stream()
                 .collect(Collectors.toMap(JobLogEntity::getJobId, logEntity -> logEntity));
     }
 
     private JobDetailVO assembleDetailVO(JobEntity entity) {
         JobDetailVO vo = converter.toDetailVO(entity);
+        AppEntity app = appReferenceService.require(entity.getAppId());
+        vo.setApp(new ReferenceVO(app.getId(), app.getNumber(), app.getName()));
         JobLogEntity lastLog = getLastLog(entity.getId());
         if (lastLog != null) {
             vo.setLastExecuteTime(lastLog.getStartTime());
             vo.setLastExecuteStatus(lastLog.getStatus());
         }
         try {
-            TriggerKey triggerKey = TriggerKey.triggerKey(entity.getJobName() + "_trigger", entity.getJobGroup());
+            TriggerKey triggerKey = ManagedJobIdentity.triggerKey(entity.getId());
             Trigger trigger = scheduler.getTrigger(triggerKey);
             if (trigger != null && trigger.getNextFireTime() != null) {
                 vo.setNextFireTime(trigger.getNextFireTime().toInstant()
